src/test/ui/feature-gates/feature-gate-raw-identifiers.stderr
error[E0658]: raw identifiers are experimental and subject to change (see issue #48589)
  --> $DIR/feature-gate-raw-identifiers.rs:12:9
   |
LL |     let r#foo = 3; //~ ERROR raw identifiers are experimental and subject to change
   |         ^^^^^
   |
   = help: add #![feature(raw_identifiers)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
